# desktop_girlfriend

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build_output.txt  partitions.csv  partitions_16mb.csv  sdkconfig  sdkconfig.old
.github/workflows/: build.yml
Driver/LCD/: CMakeLists.txt  st7789.c  st7789.h
lvgl/: CMakeLists.txt  lv_conf.h  lv_port_disp.c
main/: CMakeLists.txt  Kconfig.projbuild  app_lvgl.h  idf_component.yml  main.c  mmap_generate_assets.h
main/boards/: board.h
main/boards/common/: README.md  xl9555.c  xl9555.h
main/boards/desktop_girlfriend_V1/: board.c  config.json
main/boards/dnesp32s3/: board.c  config.json
main/bsp/: bsp_wifi_web.h
main/html/: index.html
main/modules/api/: app_api.c  app_api.h
main/modules/audio/: app_audio.c  app_audio.h  app_audio_codec.c  app_audio_codec.h  ogg_demuxer.c  ogg_demuxer.h
main/modules/display/: app_display.c  app_display.h  app_font.c  app_font.h
main/modules/display/gif/: app_gif.c  app_gif.h  gifdec.c  gifdec.h
main/modules/display/ui/: ui_home.c  ui_home.h  ui_manager.c  ui_manager.h  ui_wifi_config.c  ui_wifi_config.h
main/modules/event/: app_event.c  app_event.h
main/modules/lvgl/: app_lvgl.c
main/modules/sntp/: app_sntp.c  app_sntp.h
main/modules/wifi/: app_wifi.c  app_wifi.h  bsp_wifi_web.c  bsp_wifi_web.h
main/resources/html/: index.html
scripts/: release.py
